--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Krish AI – Under Development</title>
+  <title>Gears – Under Development</title>
   <!--
     Licensed under the Apache License, Version 2.0
     http://www.apache.org/licenses/LICENSE-2.0
